--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -12,17 +12,20 @@ resources:
 - bases/scheduling.sigs.k8s.io_podgroups.yaml
 - bases/topology.node.k8s.io_noderesourcetopologies.yaml
 - bases/quota.koordinator.sh_elasticquotaprofiles.yaml
+- bases/analysis.koordinator.sh_metricpredictions.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_nodemetrics.yaml
+#- patches/webhook_in_metricpredictions.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_nodemetrics.yaml
+#- patches/cainjection_in_metricpredictions.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
